--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body {
-  width: 80%;
-  margin: auto;
-  padding: 0;
+  width: 400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 20px;
 }
+
+
 canvas {
   display: block;
 }
