--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
   width: 400px;
+  /* min-width: 400px; */
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   padding-bottom: 20px;
 }
 
